--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.2",
-    "sass": "^1.32.5"
+    "sass": "^1.32.5",
+    "use-reducer-logger": "^1.0.2"
   },
   "scripts": {
     "start": "nodemon server.js"
@@ -18,4 +19,3 @@
   "author": "Lambda School",
   "license": "ISC"
 }
-
